--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.0",
-    "@types/node": "^12.12.25",
-    "@types/react": "^16.9.18",
-    "@types/react-dom": "^16.9.5",
+    "aws-amplify": "^2.2.2",
+    "aws-amplify-react": "^3.1.3",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "reactstrap": "^8.4.0",
+    "rxjs": "^6.5.4",
+    "styled-components": "^5.0.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -35,5 +38,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^24.9.0",
+    "@types/node": "^12.12.25",
+    "@types/react": "^16.9.18",
+    "@types/react-dom": "^16.9.5",
+    "@types/reactstrap": "^8.4.1",
+    "@types/styled-components": "^4.4.2",
+    "@types/rx": "^4.1.1"
   }
 }
